# vin_isipl

./: README.md  pyproject.toml
vin_isipl/: __init__.py  hooks.py  install.py  modules.txt  override_hd_ticket.py  patches.txt  uninstall.py
vin_isipl/doctype/: job_card_entry.js  job_card_entry.json  job_card_entry.py  test_job_card_entry.py
vin_isipl/doctype/job_card_parts/: job_card_parts.json  job_card_parts.py
vin_isipl/events/: whatsapp.py  whatsapp_message.py
vin_isipl/fixtures/: custom_field.json  doctype.json  insights_chart_v3.json  insights_dashboard_v3.json  insights_query_v3.json  insights_workbook.json  server_script.json
vin_isipl/frontend/: vite.config.js
vin_isipl/patches/: company_custom_fields.py  crm_comment_sync.py  custom_make_contact_patch.py  custom_search_key_field.py  fix_old_ticket_datetime.py  generate_search_keys.py  hd_ticket_update.py  rename_custom_field.py
vin_isipl/public/js/: delivery_note.js  hd_ticket_list.js  item.js  journal_entry.js  override_update_child_items.js  payment_entry.js  proforma_invoice.js  proforma_invoice_list.js  purchase_invoice.js  purchase_order.js  purchase_order_list.js  purchase_receipt.js  purchase_receipt_list.js  sales_invoice.js  sales_invoice_list.js  stock_entry.js
vin_isipl/utils/: accounts_controller.py  custom_search.py  hd_ticket_comment.py  isipl_crm.py  jinja.py  jinja_filters.py  payment_entry.py  pdf.py  pi_version_tracker.py  proforma_invoice.py  purchase_order.py  purchase_receipt.py  pwa_notifications.py  sales_invoice.py  ticket_actions.py
vin_isipl/vin_isipl/custom/: item.json  (+45 more)
(+66 files in other folders)
