[project]
name = "vin_isipl"
authors = [
    { name = "Vintrosys", email = "admin@vintrosys.com" }
]
description = "Vin Isipl"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Required for Bench (Frappe v15 & v16 compatibility)
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

# Optional developer mode dependencies
[tool.bench.dev-dependencies]
